--- a/sgdjs/memdist/views/index.jade
+++ b/sgdjs/memdist/views/index.jade
@@ -15,32 +15,33 @@ html
                 p 
                     input#start(type="button" value="connect")
                 p 
+                    input#addworker(type="button" value="add a worker")
+                p 
                     input#runjob(type="button" value="run sample embedded job")
                 p Upload file:                    
                 input#files(type="file" name="files")
                 span#download 0%
-                h4 Metrics:
-                p 
-                    span#isec 0
-                    span  iterations / sec
-                p 
-                    span#vsec 0
-                    span  vectors / 1000 iterations / sec
-                p
-                    span#wtime 0
-                    span  MS working time
             div.col-md-6
-                h3 Data
-                p#processinglegend Processing: 
-                    span#working 0  
-                    span  vectors
-                p#restlegend Spare: 
-                    span#spare 0  
-                    span  vectors
-                p#totalVectors Total: 
-                    span#total 0  
-                    span  vectors                    
-                div#datachart
+                h4 Workers in operation: 
+                    span#nrworkers 0
+                table.table.table-condensed
+                    thead
+                        tr
+                            th ID
+                            th Vectors/sec
+                            th &Delta;
+                            th Iterations/sec
+                            th &Delta;
+                    tbody#performance
+                    thead
+                        tr 
+                            th
+                            th.vsecaverage
+                            th
+                            th.isecaverage
+                            th
+                h4 Log
+                pre.log
 
     script(src='/js/jquery.js')
     script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
