--- a/sgdjs/memdist/public/css/app.css
+++ b/sgdjs/memdist/public/css/app.css
@@ -12,10 +12,42 @@
 	color: rgb(107, 174, 214);
 }
 
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 999px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+.navbar-header {
+    height: 50px;
+}
+
+.navbar-nav {
+    margin: inherit;
+}
+
 @media (max-width: 500px) {
 
 	table {
 		font-size: 11px;
 	}
+
+    .navbar-brand {
+        font-size: 14px;
+    }
 
 }
