improved monitor, client performance

--- a/sgdjs/memdist/views/index.jade
+++ b/sgdjs/memdist/views/index.jade
@@ -33,9 +33,7 @@ html
                         tr
                             th ID
                             th V/sec
-                            th I/sec
-                            th V/Slice
-                            th I/Slice
+                            th Iter
                             th TA
                             th TRT
                             th MS
@@ -44,8 +42,6 @@ html
                         tr 
                             th
                             th.vsecaverage
-                            th
-                            th
                             th
                             th
                             th
