--- a/sgdjs/memdist/views/monitor.jade
+++ b/sgdjs/memdist/views/monitor.jade
@@ -10,12 +10,49 @@ html
         div.container
             div.navbar-header
                 a.navbar-brand(href="#") ML in the Browser
+                ul.nav.navbar-nav.navbar-right
+                    li
+                        a step time: #{step} ms
     div.container
         div.row
-            div.col-lg-6
-                h4 Monitor
-                pre#log            
+            div.col-md-6
+                h4 Classifier error rate
+                table.table.table-condensed
+                    thead
+                        tr
+                            th Step
+                            th Error
+                            th Delta
+                    tbody
+                        tr
+                            td
+                                span#step.error
+                            td
+                                span#error
+                            td
+                                span#delta
+                // pre#log           
+                div#errorcontainer
+
+            div.col-md-6
+                h4 Network power in vectors per timestep
+                table.table.table-condensed
+                    thead
+                        tr
+                            th Step
+                            th Power
+                            th Clients
+                    tbody
+                        tr
+                            td
+                                span#step.power
+                            td
+                                span#power
+                            td
+                                span#clients
+                div#powercontainer
 
     script(src='/js/jquery.js')
+    script(src='/js/highcharts.js')
     script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
     script(src='/js/monitor.js')
