--- a/sgdjs/dev/ping/views/index.jade
+++ b/sgdjs/dev/ping/views/index.jade
@@ -3,7 +3,8 @@ html
   head
     title Round Trip test
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    script(src='/socket.io/socket.io.js')
+    script(src='/js/jquery.js')
+    script(src='/js/lz-string-1.3.3-min.js')
   body
     h3 Round Trip Test
     pre#log
