--- a/sgdjs/memdist/views/monitor.jade
+++ b/sgdjs/memdist/views/monitor.jade
@@ -5,14 +5,29 @@ html
     meta(name="viewport" content="width=device-width, initial-scale=1")
     script(src='/socket.io/socket.io.js')
     link(rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css")
+    link(rel="stylesheet" href="/css/monitor.css")
   body
     nav.navbar.navbar-default(role="navigation")
         div.container
             div.navbar-header
                 a.navbar-brand(href="#") ML in the Browser
-                ul.nav.navbar-nav.navbar-right
+                ul.nav.navbar-nav
                     li
-                        a step time: #{step} ms
+                        //a step time: #{step} ms
+                        button.btn.btn-default.navbar-btn#start(type="button")
+                            span.glyphicon.glyphicon-play
+                            span.navtext  Start
+                        button.btn.btn-default.navbar-btn#pause(type="button")
+                            span.glyphicon.glyphicon-pause
+                            span.navtext  Pause
+                        button.btn.btn-default.navbar-btn#reset(type="button")
+                            span.glyphicon.glyphicon-repeat
+                            span.navtext  Reset
+                ul.nav.navbar-nav.steptext
+                    li
+                        a.navbar-link step time: #{step} ms
+
+
     div.container
         div.row
             div.col-md-6
@@ -51,6 +66,8 @@ html
                             td
                                 span#clients
                 div#powercontainer
+
+    input(type='hidden', id='started', value='#{start}')
 
     script(src='/js/jquery.js')
     script(src='/js/highcharts.js')
