--- a/sgdjs/memdist/views/test.jade
+++ b/sgdjs/memdist/views/test.jade
@@ -5,16 +5,44 @@ html
     meta(name="viewport" content="width=device-width, initial-scale=1")
     script(src='/socket.io/socket.io.js')
     link(rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css")
+    link(rel="stylesheet" href="/css/app.css")
   body
     nav.navbar.navbar-default(role="navigation")
         div.container
             div.navbar-header
                 a.navbar-brand(href="#") ML in the Browser
+                ul.nav.navbar-nav.navbar-right
+                    li
+                        button.btn.btn-default.navbar-btn#start(type="button")
+                            span.glyphicon.glyphicon-off
+                            span  Start
+                        span.btn.btn-default.btn-file.navbar-btn
+                            input#files(type="file" name="files")
+                            span.glyphicon.glyphicon-upload
+                            span  Upload
+                        span.btn.btn-default.btn-file.navbar-btn#addworker
+                            span.glyphicon.glyphicon-plus
 
     div.container
         div.row
             div.col-md-6
                 h4 Test network
+                table.table.table-condensed
+                    thead
+                        tr
+                            th Step
+                            th Error
+                            th Delta
+                    tbody
+                        tr
+                            td
+                                span#step.error
+                            td
+                                span#error
+                            td
+                                span#delta
+                // pre#log           
+                div#errorcontainer
                 
 
     script(src='/js/jquery.js')
