--- a/thesis/views/monitor.jade
+++ b/thesis/views/monitor.jade
@@ -31,26 +31,7 @@ html
     div.container
         div.row
             div.col-md-6
-                h4 Classifier error rate
-                table.table.table-condensed
-                    thead
-                        tr
-                            th Step
-                            th Error
-                            th Delta
-                    tbody
-                        tr
-                            td
-                                span#step.error
-                            td
-                                span#error
-                            td
-                                span#delta
-                // pre#log           
-                div#errorcontainer
-
-            div.col-md-6
-                h4 Network power in vectors per timestep
+                h4 Network power
                 table.table.table-condensed
                     thead
                         tr
@@ -67,7 +48,7 @@ html
                                 span#clients
                 div#powercontainer
             div.col-md-6
-                h4 Latency per timestep
+                h4 Latency
                 table.table.table-condensed
                     thead
                         tr
