--- a/thesis/views/index.jade
+++ b/thesis/views/index.jade
@@ -18,8 +18,8 @@ html
                             span  Start
                         span.btn.btn-default.btn-file.navbar-btn
                             input#files(type="file" name="files")
-                            span.glyphicon.glyphicon-upload
-                            span  Upload
+                            span.glyphicon.glyphicon-cloud-upload
+                            span.navtext  Upload
                         span.btn.btn-default.btn-file.navbar-btn#addworker
                             span.glyphicon.glyphicon-plus
 
