--- a/thesis/views/test.jade
+++ b/thesis/views/test.jade
@@ -15,7 +15,7 @@ html
                     li
                         span.btn.btn-default.btn-file.navbar-btn
                             input#files(type="file" name="files")
-                            span.glyphicon.glyphicon-upload
+                            span.glyphicon.glyphicon-cloud-upload
                             span  Upload
 
     div.container
