--- a/thesis/views/test.jade
+++ b/thesis/views/test.jade
@@ -15,8 +15,8 @@ html
                     li
                         span.btn.btn-default.btn-file.navbar-btn
                             input#files(type="file" name="files")
-                            span.glyphicon.glyphicon-cloud-upload
-                            span  Upload
+                            span.glyphicon.glyphicon-upload
+                            span  Load
 
     div.container
         div.row
