--- a/thesis/views/index.jade
+++ b/thesis/views/index.jade
@@ -33,10 +33,10 @@ html
                         tr
                             th ID
                             th V/sec
-                            th Iter
-                            th TA
-                            th TRT
-                            th MS
+                            th V/RTime
+                            th Time
+                            th Real Time
+                            th Lag mS
                     tbody#performance
                     thead
                         tr 
