--- a/thesis/views/monitor.jade
+++ b/thesis/views/monitor.jade
@@ -31,7 +31,7 @@ html
     div.container
         div.row
             div.col-md-6
-                h4 Network power
+                h4 Network power (v/sec)
                 table.table.table-condensed
                     thead
                         tr
@@ -48,7 +48,7 @@ html
                                 span#clients
                 div#powercontainer
             div.col-md-6
-                h4 Latency
+                h4 Latency (mS)
                 table.table.table-condensed
                     thead
                         tr
