--- a/thesis/views/index.jade
+++ b/thesis/views/index.jade
@@ -41,7 +41,7 @@ html
                     thead
                         tr 
                             th
-                            th.vsecaverage
+                            th.vsectotal
                             th
                             th
                             th
