--- a/thesis/views/index.jade
+++ b/thesis/views/index.jade
@@ -26,7 +26,7 @@ html
     div.container
         div.row
             div.col-lg-6
-                h4 Workers in operation: 
+                h4 Workers active: 
                     span#nrworkers 0
                 table.table.table-condensed
                     thead
