--- a/thesis/views/index.jade
+++ b/thesis/views/index.jade
@@ -46,8 +46,8 @@ html
                             th
                             th
                             th
-                // h4 Log
-                // pre.log
+                # h4 Log
+                # pre.log
 
     script(src='/js/jquery.js')
     script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
