--- a/app/static/client.css
+++ b/app/static/client.css
@@ -2,7 +2,7 @@
     position: relative;
     overflow: hidden;
 }
-.btn-file input[type=file] {
+.btn-file input {
     position: absolute;
     top: 0;
     right: 0;
