topology vis update

--- a/sgdjs/memdist/views/monitor.jade
+++ b/sgdjs/memdist/views/monitor.jade
@@ -89,6 +89,8 @@ html
                 div#latencycontainer
             div#d3vis
                 script(src='/d3/topology.js')
+            div#d3vis2
+                script(src='/d3/redundancy.js')
 
     input(type='hidden', id='started', value='#{start}')
 
