--- a/app/static/partials/join.html
+++ b/app/static/partials/join.html
@@ -1,6 +1,6 @@
     <div class="container" ng-controller="join" ng-init="update_nns()">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-12">
 
                 <h3>Join a network</h3>
                 <table class="table table-striped">
@@ -30,7 +30,8 @@
                             <td></td>
                         </tr>
                         <tr ng-repeat="nn in client.nns | filter:namequery | orderBy:sort:reverse">
-                            <td>{{ nn.name }}</td>
+                            <td ng-show="nn.public_client"><a href="#/public/{{ nn.id }}/">{{ nn.name }}</a></td>
+                            <td ng-hide="nn.public_client">{{ nn.name }}</td>
                             <td>{{ nn.clients }}</td>
                             <td>{{ nn.power }} v/S</td>
                             <td>{{ nn.runtime_elapsed }} mS</td>
@@ -47,6 +48,7 @@
                 <pre class="log">{{ log }}</pre>
 
             </div>
+            <!--
             <div class="col-lg-4">
                 <h3>Filter</h3>
                 <div class="input-group input-group-sm">
@@ -54,6 +56,7 @@
                     <input type="text" class="form-control" ng-model="namequery">
                 </div>
             </div>
+            -->
 
         </div>
     </div>
