--- a/app/static/partials/publicclient.html
+++ b/app/static/partials/publicclient.html
@@ -1,10 +1,18 @@
 <div class="container" ng-controller="publicclient">
     <div class="row">
-        <div class="col-xs-4">
+        <div class="col-xs-8">
 
             <h3>Public client</h3>
             <p><span class="btn btn-default btn-file btn-lg"><input id="picture" name="files" type="file"> <span class="glyphicon glyphicon-camera"></span> Take picture</button></span></p>
             <canvas id="image"></canvas>
+            <div ng-show="classify_results">
+            	<h4>Results</h4>
+				<ul>
+                   <li data-ng-repeat="(key, value) in classify_results">
+                   		{{ key }}: {{ value }}
+                   </li>
+            	</ul>
+            </div>
         </div>
     </div>
 </div>
