added CIFAR 10 model

--- a/app/static/partials/new.html
+++ b/app/static/partials/new.html
@@ -43,6 +43,9 @@
                             <li>
                                 <a ng-click="load_template('elaborate_mnist')">Elaborate MNIST digit classifier</a>
                             </li>
+                            <li>
+                                <a ng-click="load_template('cifar10')">Cifar 10 Model</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
