minor config changes

--- a/app/static/partials/new.html
+++ b/app/static/partials/new.html
@@ -21,6 +21,8 @@
                         <label for="iteration_time">Iteration time in mS</label>
                         <br />
                         <label class="radio-inline">
+                            <input type="radio" name="iteration_time" id="inlineRadio1" ng-model="nn.iteration_time" value="1000"> 1000
+                          </label>
                           <input type="radio" name="iteration_time" id="inlineRadio1" ng-model="nn.iteration_time" value="5000"> 5000
                         </label>
                         <label class="radio-inline">
