--- a/app/static/partials/new.html
+++ b/app/static/partials/new.html
@@ -22,9 +22,11 @@
                         <br />
                         <label class="radio-inline">
                             <input type="radio" name="iteration_time" id="inlineRadio1" ng-model="nn.iteration_time" value="500"> 500
-                          </label>
+                        </label>
+                        <label class="radio-inline">
                             <input type="radio" name="iteration_time" id="inlineRadio1" ng-model="nn.iteration_time" value="1000"> 1000
-                          </label>
+                        </label>
+                        <label class="radio-inline">
                           <input type="radio" name="iteration_time" id="inlineRadio1" ng-model="nn.iteration_time" value="5000"> 5000
                         </label>
                         <label class="radio-inline">
